--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ nbproject
 *.sublime-project
 *.sublime-workspace
 .idea
+.vscode
 
 # Folders to ignore
 .sass-cache
@@ -30,5 +31,8 @@ nbproject
 _tmp
 node_modules
 bower_components
+build
 
 .gitkeep
+
+package-lock.json
